sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/Enrich_Case_Based_On_Origin_Config__mdt.object-meta.xml
<CustomObject>
    <label>Enrich Case Based On Origin Config</label>
    <pluralLabel>Enrich Case Based On Origin Configs</pluralLabel>
</CustomObject>