sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/fields/Case_Type_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_To_Assign__c</fullName>
    <label>Case Type To Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Channel</fullName>
                <default>true</default>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Functional Product Support</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Sales Information</fullName>
            </value>
            <value>
                <fullName>SASSI Internal</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Tariff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>