sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/fields/Case_Visibility_Grouping_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Case_Visibility_Grouping_To_Assign__c</fullName>
    <label>Case Visibility Grouping To Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Sales</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>