sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/fields/Department_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Department_To_Assign__c</fullName>
    <label>Department To Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agent Helpdesk</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Digital Channel Support</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>Functional Product Support</fullName>
            </value>
            <value>
                <fullName>SoMe Support</fullName>
            </value>
            <value>
                <fullName>Group Sales</fullName>
            </value>
            <value>
                <fullName>Info Hub</fullName>
            </value>
             <value>
                <fullName>Liability</fullName>
            </value>
			 <value>
                <fullName>SAS Operating Center</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>