sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/fields/Entitlement_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_To_Assign__c</fullName>
    <label>Entitlement To Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Basic 8 - 17</fullName>
            </value>
            <value>
                <fullName>Basic 9 - 17</fullName>
            </value>
            <value>
                <fullName>Digital Channel Support</fullName>
            </value>
            <value>
                <fullName>EB Missing Points</fullName>
            </value>
            <value>
                <fullName>Pandion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>