sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/fields/Incoming_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Case_Origin__c</fullName>
    <label>Incoming Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email - Agent Fares Ticketing EU</fullName>
            </value>
            <value>
                <fullName>Email - Agent Helpdesk Scandinavia</fullName>
            </value>
            <value>
                <fullName>Email - Corporate Support Backoffice</fullName>
            </value>
            <value>
                <fullName>Email - Corporate Support International</fullName>
            </value>
            <value>
                <fullName>Email - Corporate Support Scandinavia</fullName>
            </value>
            <value>
                <fullName>Email - Digital Channel Support External</fullName>
            </value>
            <value>
                <fullName>Email - Digital Channel Support Internal</fullName>
            </value>
            <value>
                <fullName>Email - Direct Sales Reservations DK</fullName>
            </value>
            <value>
                <fullName>Email - Direct Sales Reservations NO</fullName>
            </value>
            <value>
                <fullName>Email - Direct Sales Reservations SE</fullName>
            </value>
            <value>
                <fullName>Email - EB Missing Points</fullName>
            </value>
            <value>
                <fullName>Email - EB Pai Manual</fullName>
            </value>
            <value>
                <fullName>Email - EB Vendor Support</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Diamond DK</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Diamond NO</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Diamond SE</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Gold DK</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Gold NO</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Gold SE</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Identify Customer</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Name Change</fullName>
            </value>
            <value>
                <fullName>Email - EuroBonus Partner Support</fullName>
            </value>
            <value>
                <fullName>Email - Forsvaret NO</fullName>
            </value>
            <value>
                <fullName>Email - Functional Product Support</fullName>
            </value>
            <value>
                <fullName>Email - Group Sales ACE</fullName>
            </value>
            <value>
                <fullName>Email - Group Sales AT</fullName>
            </value>
            <value>
                <fullName>Email - Group Sales Benelux</fullName>
            </value>
            <value>
                <fullName>Email - Group Sales Bulk</fullName>
            </value>
            <value>
                <fullName>Email - Group Sales CH</fullName>
            </value>
            <value>
                <fullName>Email - Group Sales DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>