sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/fields/Team_To_Assign__c.field-meta.xml
<CustomField>
    <fullName>Team_To_Assign__c</fullName>
    <label>Team To Assign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACE</fullName>
                <default>true</default>
                <label>ACE</label>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Backoffice</fullName>
            </value>
            <value>
                <fullName>Bank Payment</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>BOM ARC</fullName>
            </value>
            <value>
                <fullName>BOM BSP</fullName>
            </value>
            <value>
                <fullName>BOM Forms Customer</fullName>
            </value>
            <value>
                <fullName>BOM Forms Travel Agent</fullName>
            </value>
            <value>
                <fullName>BOM Forsvaret</fullName>
            </value>
            <value>
                <fullName>BOM General</fullName>
            </value>
            <value>
                <fullName>BOM Groups</fullName>
            </value>
            <value>
                <fullName>BOM IOM</fullName>
            </value>
            <value>
                <fullName>BOM Reminders</fullName>
            </value>
            <value>
                <fullName>BOM Tenured</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Businesstravel STO</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Compensation Card</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Diamond DK</fullName>
            </value>
            <value>
                <fullName>Diamond NO</fullName>
            </value>
            <value>
                <fullName>Diamond SE</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>