sas-core/main/default/objects/Enrich_Case_Based_On_Origin_Config__mdt/listViews/Display_queues.listView-meta.xml
<ListView>
    <fullName>Display_queues</fullName>
    <columns>MasterLabel</columns>
    <columns>Incoming_Case_Origin__c</columns>
    <columns>Case_Type_To_Assign__c</columns>
    <columns>Case_Visibility_Grouping_To_Assign__c</columns>
    <filterScope>Everything</filterScope>
    <label>Display queues</label>
    <language>en_US</language>
</ListView>